--- a/GUI/Components/Pages/Home.razor
+++ b/GUI/Components/Pages/Home.razor
@@ -61,6 +61,11 @@
                     Upon changing column/row numbers if a cell referenced a cell which no longer is visible the value for the cell (in the view only )
                     changes to an Evaluation Error. Upon bringing the cell back by changing row/col number back the cells value is reverted to its
                     original value!
+                    We attempted to add the following:
+                    1.  Attempted to add arrows keys to maneuver around cells in spreadsheet, it worked in every situation except for the situation where you were typing something and then pressed
+                    arrow key. This led to various javascript errors which for whatever reason would overwrite the cell we maneuvered too with the text that we were typing. There was an also
+                    an issue of practicality. A user must be selected into a input (and typing) to use the arrow keys. We abandoned the idea (you can view our git commits to see what we tried).
+                    2. Attempted to add Google Ad-sense to our project for fun. We realized this would require a server so abandoned the idea.
                 </p>
             </div>
         </div>
