git bein stupid

--- a/GUI.Client/Pages/SpreadsheetGUI.razor
+++ b/GUI.Client/Pages/SpreadsheetGUI.razor
@@ -26,7 +26,7 @@
 
 @page "/spreadsheet"
 @rendermode InteractiveAuto
-@inject IJSRuntime JS  // <remarks> Allows the "communication"/use of javascriptt </remarks>
+@inject IJSRuntime JS  // <remarks> Allows the "communication"/use of javascript </remarks>
 @inject NavigationManager Navigator
 
 @namespace SpreadsheetNS
